# HARlighter

./: .eslintrc.js  .prettier.config.js  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.github/workflows/: biome.yml  build.yml  ci.yml  vitest.yml
apps/capturer/: har.js  index.mjs  package-lock.json  package.json  page.js
apps/chrome-extension/: .env  .env.staging  .gitignore  nodemon.json  vite.config.ts
apps/mocksi-lite/: MocksiRollbar.ts  README.md  WebSocketBuilder.ts  background.ts  background_BACKUP_49967.ts  background_LOCAL_49967.ts  background_REMOTE_49967.ts  biome.json  consts.ts  https.ts  make_build.sh  manifest.json  mckSocket.ts  networking.ts  package.json  postcss.config.js  reactorSingleton.ts  tailwind.config.js  tsconfig.json  typings.d.ts  universalReplace.ts  utils.ts  vitest-chrome-mock.ts  vitest.config.ts  vitest.init.ts  webpack.config.js
apps/mocksi-lite-next/: .env  .env.development  .env.production  .env.staging  .eslintrc  .eslintrc.js  .gitignore  manifest.dev.json  manifest.json  manifest.staging.json  nodemon.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1724351457304-9b25862a7b76b.mjs
apps/mocksi-lumen/: README.md  background.ts  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/owlserver-chrome/: package.json  rollup.config.js  (+1 more)
apps/rag/: .env.sample  demo_app.py  loader.py  package.json  pyproject.toml  streamlit_app.py
apps/rag/.devcontainer/: devcontainer.json
docs/: index.md  product-flow.md
(+141 files in other folders)
